--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -12,10 +12,12 @@ binders/types/pic.png: binders/types/pic-8659c64d7190039fc9b9f7bea85ee584.png
 binders/types/video.png: binders/types/video-9ca1380da7ebfa976ca80c9728560a29.png
 binders/types/web.png: binders/types/web-d268ad7247c7527c4abc247c9e55a05e.png
 binders/wytb.png: binders/wytb-a752a43b85c2378e2bed6d273ff550c0.png
-claco.png: claco-be6723ea4f280266b2dd6985c15702e8.png
+claco.png: claco-8b30d9f353121d8d1947b51c5ee9ad07.png
 common/nothumb.png: common/nothumb-068c98cdacc7bf68c605ad275d1569e0.png
 common/plane.png: common/plane-0de42fd2f9a71ebcdb4176daff7fb46f.png
 common/plus.png: common/plus-052578f7c360b544fe94035b12c578da.png
+fabric.jpg: fabric-1e5bdb7ce1d19c86cfbcdcc2711497ca.jpg
+fabric.png: fabric-8c96ca04cd458581bd5ab5598726012b.png
 fbox/closelabel.png: fbox/closelabel-fe82a955ae8e68eb7195f179ce515cf1.png
 fbox/loading.gif: fbox/loading-5c5a98dbe29c4a5337a7e19e056521f6.gif
 guider/guider_arrows.png: guider/guider_arrows-3f778a228be4e27b474a1db7cb57029d.png
@@ -150,8 +152,8 @@ jqueryui.css: jqueryui-3e5488d61bcd5d2d63259970ab23b226.css
 media_server_api.css: media_server_api-7270767b2a9e9fff880aa5de378ca791.css
 messages/main.css: messages/main-187b397142a653ce27d4a8a80b6efa8b.css
 search/main.css: search/main-82772556488157d592c21c6fa0f41192.css
-strap.css: strap-3eb69424da48482ef40877c9436a670c.css
-teacher.css: teacher-62601b4f63436bead7ada0c06c260ee3.css
+strap.css: strap-3a715cfcce816e5c3a3fdef071457627.css
+teacher.css: teacher-265d94eeadbf76cf0e619b40363a7e0b.css
 widgets/icheck.css: widgets/icheck-1fe06c28e81f76d3ca8bbd85b64abbaf.css
 jquery.pjax.js: jquery.pjax-7b0904f82bd59dce01ee7711ebc10d35.js
 video-js.css: video-js-c234251157b9d56d3be36cb308528e7f.css
