--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -52,9 +52,14 @@ public/jennie.jpeg: public/jennie-886209d1a8eaf0f8e090926a57fc5136.jpeg
 public/jerry.png: public/jerry-b52864f10ba5d3a1f2f01ebd9fc10cb9.png
 public/nasa.jpg: public/nasa-360489e091b9147989805e9a450e621e.jpg
 public/nbc.png: public/nbc-bd61436100abd7bd465b2e456f6b877d.png
+public/pioneers/pioneers.jpg: public/pioneers/pioneers-8b719c48402ec50191015de6c2b5e442.jpg
+public/product/apple.jpg: public/product/apple-8ae6ff10a6dce62a7770f90565aa4638.jpg
+public/product/apple2.jpg: public/product/apple2-73086659d679fc2c8dc9b2ce234835ba.jpg
+public/product/applefinal.jpg: public/product/applefinal-c65a6fbe54234b57854fc1a83eed6024.jpg
 public/product/bg.jpg: public/product/bg-04f0fa0e928e9eb3518c4c230b24f935.jpg
 public/product/binder.png: public/product/binder-c9f9896961a8088f4270a18160de7fe3.png
 public/product/bk.jpg: public/product/bk-ffaa5a6d5bf9cf5c6574f098cb13d720.jpg
+public/product/features.jpg: public/product/features-a828f1b23149aa5b037b61c0ee3d0a40.jpg
 public/product/new.png: public/product/new-0d58bf05774fb4b1a3904cac299192bc.png
 public/product/prof1.png: public/product/prof1-74be8803cb0b220917940ff18eebea49.png
 public/product/share2.png: public/product/share2-f798b99a47e24972d5a2231d468505d9.png
@@ -118,6 +123,7 @@ gen/guiders.js: gen/guiders-693d564bd42978b8a4bcafb2ec898d78.js
 gen/sticky.js: gen/sticky-c7405eda437c719c60a02718ab838fc1.js
 gen/wizard.js: gen/wizard-9d34752f5efde34b08a518def5a09d72.js
 home/main.js: home/main-301c922b6573173306f7b0e87c3363bf.js
+home/pub.js: home/pub-02a36d8b4d98f3403fcb9a38da0ff118.js
 jqueryui.js: jqueryui-c04b8ed279f78b6387c8d090964d2e16.js
 media_server_api.js: media_server_api-3af39f1da6f167c2cbf453ed74daff3d.js
 messages/show.js: messages/show-af1bfe6546d966549eb5e11fd056910c.js
@@ -142,10 +148,11 @@ devise/newuser.css: devise/newuser-bae1fe6623a62e3ccf89675e17aed940.css
 editinfo.css: editinfo-7f91d7e2fc8e6b9c909c97164aa3292b.css
 gen/guiders.css: gen/guiders-acc3fea933996e2708a585726477c0f1.css
 home/main.css: home/main-b73437393881caf1f1a2e370239c9fda.css
-home/pub/about.css: home/pub/about-c9bddc9e0be78cd859df410d778bf6bb.css
+home/pub/about.css: home/pub/about-d828dfad390c7e3cc313fbabf72109cf.css
+home/pub/pioneers.css: home/pub/pioneers-079d64301b9d8854bc0fa04053053d83.css
 home/pub/team.css: home/pub/team-ce1e43f72a8d96a8b08ce936c64f0aaf.css
 home/pub/uwt.css: home/pub/uwt-1e8baecc5f7a535e85a2df14dad531cf.css
-home/public.css: home/public-4866b9377b156ac75ffc12af38ffb43f.css
+home/public.css: home/public-35bb08bfaa76af2064bebb8bd1f8a953.css
 jqueryui.css: jqueryui-3e5488d61bcd5d2d63259970ab23b226.css
 media_server_api.css: media_server_api-7270767b2a9e9fff880aa5de378ca791.css
 messages/main.css: messages/main-187b397142a653ce27d4a8a80b6efa8b.css
