--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -105,7 +105,7 @@ stockfilethumbs/wmv.png: stockfilethumbs/wmv-ffe500c9db4402e68e56f126846e3e79.pn
 stockfilethumbs/xls.png: stockfilethumbs/xls-980bc311d58b7f23802c0e12c8d66294.png
 stockfilethumbs/xlsx.png: stockfilethumbs/xlsx-618bc0693ac24e4179ffd92317a67cd6.png
 success.png: success-11af90207d2f9fb4bbeae9239725ac5c.png
-application.js: application-2e6f11431cefed2107fef3ac3b82f975.js
+application.js: application-de5e236a96e92ec9ec9f195acab4bc14.js
 binder.js: binder-3af39f1da6f167c2cbf453ed74daff3d.js
 binders/folder.js: binders/folder-c16260fcfbfb2f5b8f92f7bb20c6a550.js
 binders/icheck.js: binders/icheck-5c1621b3f36a3f184889c9e35c9f8aca.js
@@ -136,14 +136,15 @@ tooltip.js: tooltip-c1f31f50d05852374b1ca905917af3e6.js
 wy/advanced.js: wy/advanced-01d3e1942ab8766ddc228bd8ec3fbffa.js
 wy/wysi5.js: wy/wysi5-8a5037af8f1c3a6fa7d337299b216353.js
 standards.json: standards-4d8d2082bb3640cdf407ce4515f8d06e.json
-application.css: application-aaba15620364c9112b4385c97d09242a.css
+application.css: application-172ee71a5007512e99ef0d7d7d3c289c.css
 binders.css: binders-7270767b2a9e9fff880aa5de378ca791.css
 binders/folder.css: binders/folder-3f5d7dcdb60cbd6384b0fa3bb6e24945.css
 box.css: box-b8972fc537f439c7d53ccd9adfe23206.css
-buttons/buttons.css: buttons/buttons-a217c9216b6d727e2ba3b5b7a7062c25.css
+buttons/buttons.css: buttons/buttons-992f95a728974e524b06a877ca232f24.css
 buttons/zocial-regular-webfont.eot: buttons/zocial-regular-webfont-a0e11676e0eb455a805549dfe73095b3.eot
 buttons/zocial-regular-webfont.svg: buttons/zocial-regular-webfont-0e6254926a7b20f34112a2cc2e1cdcc3.svg
 buttons/zocial-regular-webfont.ttf: buttons/zocial-regular-webfont-64b8100c4452b3191c14f52556955667.ttf
+buttons/zocial-regular-webfont.woff: buttons/zocial-regular-webfont-beb0af4aa85ca3f84348c19883dbdbd9.woff
 devise/apply.css: devise/apply-0ad1afb7a35de94bd1e3ed2d11b7c881.css
 devise/newuser.css: devise/newuser-bae1fe6623a62e3ccf89675e17aed940.css
 editinfo.css: editinfo-7f91d7e2fc8e6b9c909c97164aa3292b.css
