--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -48,6 +48,8 @@ public/devise/applybk.jpg: public/devise/applybk-d01fcc1fec3d2ad93f94fb86246f789
 public/erin.jpg: public/erin-b9b482c02accffc3b1cda1f6dd92f640.jpg
 public/fast.png: public/fast-f86d4ddd6c4a8e99182b23f074ccece3.png
 public/fullcore.png: public/fullcore-c0d8006f6a24531fc1f747545eee64dd.png
+public/highway.jpg: public/highway-17d945deffa8a9cebd3691722fe370f7.jpg
+public/highway.png: public/highway-c074fbde9b4f3f74530e0d58ecaa241a.png
 public/jeff.jpg: public/jeff-6e3587544f93ece94751437ec68e4fa7.jpg
 public/jennie.jpeg: public/jennie-886209d1a8eaf0f8e090926a57fc5136.jpeg
 public/jerry.png: public/jerry-b52864f10ba5d3a1f2f01ebd9fc10cb9.png
@@ -107,7 +109,7 @@ stockfilethumbs/xlsx.png: stockfilethumbs/xlsx-618bc0693ac24e4179ffd92317a67cd6.
 success.png: success-11af90207d2f9fb4bbeae9239725ac5c.png
 application.js: application-de5e236a96e92ec9ec9f195acab4bc14.js
 binder.js: binder-3af39f1da6f167c2cbf453ed74daff3d.js
-binders/folder.js: binders/folder-c16260fcfbfb2f5b8f92f7bb20c6a550.js
+binders/folder.js: binders/folder-91db727ad472f6a83e12fb3f7b3030ee.js
 binders/icheck.js: binders/icheck-5c1621b3f36a3f184889c9e35c9f8aca.js
 binders/pretags.js: binders/pretags-9aeb3580994267ddf468f4dbd4bfdffd.js
 binders/taginit.js: binders/taginit-4b62d889f8b850f4901bc88aca91d79d.js
@@ -136,11 +138,11 @@ tooltip.js: tooltip-c1f31f50d05852374b1ca905917af3e6.js
 wy/advanced.js: wy/advanced-01d3e1942ab8766ddc228bd8ec3fbffa.js
 wy/wysi5.js: wy/wysi5-8a5037af8f1c3a6fa7d337299b216353.js
 standards.json: standards-4d8d2082bb3640cdf407ce4515f8d06e.json
-application.css: application-172ee71a5007512e99ef0d7d7d3c289c.css
+application.css: application-aaba15620364c9112b4385c97d09242a.css
 binders.css: binders-7270767b2a9e9fff880aa5de378ca791.css
-binders/folder.css: binders/folder-3f5d7dcdb60cbd6384b0fa3bb6e24945.css
+binders/folder.css: binders/folder-40f61fb57e03f42611e5cc63aff6193e.css
 box.css: box-b8972fc537f439c7d53ccd9adfe23206.css
-buttons/buttons.css: buttons/buttons-992f95a728974e524b06a877ca232f24.css
+buttons/buttons.css: buttons/buttons-a217c9216b6d727e2ba3b5b7a7062c25.css
 buttons/zocial-regular-webfont.eot: buttons/zocial-regular-webfont-a0e11676e0eb455a805549dfe73095b3.eot
 buttons/zocial-regular-webfont.svg: buttons/zocial-regular-webfont-0e6254926a7b20f34112a2cc2e1cdcc3.svg
 buttons/zocial-regular-webfont.ttf: buttons/zocial-regular-webfont-64b8100c4452b3191c14f52556955667.ttf
@@ -149,7 +151,8 @@ devise/apply.css: devise/apply-0ad1afb7a35de94bd1e3ed2d11b7c881.css
 devise/newuser.css: devise/newuser-bae1fe6623a62e3ccf89675e17aed940.css
 editinfo.css: editinfo-7f91d7e2fc8e6b9c909c97164aa3292b.css
 gen/guiders.css: gen/guiders-acc3fea933996e2708a585726477c0f1.css
-home/main.css: home/main-b73437393881caf1f1a2e370239c9fda.css
+home/educators.css: home/educators-0fdea0325db52694e5a437bf12c42162.css
+home/main.css: home/main-b4e88e858c4ba30f581eca373eac63d0.css
 home/pub/about.css: home/pub/about-d828dfad390c7e3cc313fbabf72109cf.css
 home/pub/pioneers.css: home/pub/pioneers-079d64301b9d8854bc0fa04053053d83.css
 home/pub/team.css: home/pub/team-ce1e43f72a8d96a8b08ce936c64f0aaf.css
