--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -35,6 +35,14 @@ pin.png: pin-a8d90f95146598563258c73bf08b85eb.png
 placer.png: placer-f92ebf1d40f6c0514181480e15cb3676.png
 profile/colleague.png: profile/colleague-3fd5a992ba9378ac678f494f6cd87405.png
 profile/darkscribe.png: profile/darkscribe-4057fc52d88dd5282390ff2967af71ac.png
+profile/face-122.png: profile/face-122-469a7daec0251a1aae58a3eef44907b9.png
+profile/face-170.png: profile/face-170-b87cdc1462cdbca37bc01f10717e27f9.png
+profile/face-30.png: profile/face-30-0b921fadb2c636397f4c8b8bdc5b57ce.png
+profile/face-48.png: profile/face-48-4c533ea0ace5b632a302852f630d2077.png
+profile/face-inverse-122.png: profile/face-inverse-122-1a726e13f17cb34523d9d1dfe97e01f8.png
+profile/face-inverse-170.png: profile/face-inverse-170-b2330eaab7b48a19d4f0f3f6cb589b94.png
+profile/face-inverse-30.png: profile/face-inverse-30-04e313bd50e0bd0aed354c76ddf28f5a.png
+profile/face-inverse-48.png: profile/face-inverse-48-b6fc393d84905bec928748d467319a6a.png
 profile/message.png: profile/message-f10f39396e76b44126cf907517b2ba29.png
 profile/point.png: profile/point-ca0e15e07f2451a2c144c17509bfdd42.png
 profile/scribe.png: profile/scribe-827ecb4b1779a8d3b93818fab74a6d44.png
@@ -56,8 +64,6 @@ public/jerry.png: public/jerry-b52864f10ba5d3a1f2f01ebd9fc10cb9.png
 public/nasa.jpg: public/nasa-360489e091b9147989805e9a450e621e.jpg
 public/nbc.png: public/nbc-bd61436100abd7bd465b2e456f6b877d.png
 public/pioneers/pioneers.jpg: public/pioneers/pioneers-8b719c48402ec50191015de6c2b5e442.jpg
-public/product/apple.jpg: public/product/apple-8ae6ff10a6dce62a7770f90565aa4638.jpg
-public/product/apple2.jpg: public/product/apple2-73086659d679fc2c8dc9b2ce234835ba.jpg
 public/product/applefinal.jpg: public/product/applefinal-c65a6fbe54234b57854fc1a83eed6024.jpg
 public/product/bg.jpg: public/product/bg-04f0fa0e928e9eb3518c4c230b24f935.jpg
 public/product/binder.png: public/product/binder-c9f9896961a8088f4270a18160de7fe3.png
@@ -107,7 +113,7 @@ stockfilethumbs/wmv.png: stockfilethumbs/wmv-ffe500c9db4402e68e56f126846e3e79.pn
 stockfilethumbs/xls.png: stockfilethumbs/xls-980bc311d58b7f23802c0e12c8d66294.png
 stockfilethumbs/xlsx.png: stockfilethumbs/xlsx-618bc0693ac24e4179ffd92317a67cd6.png
 success.png: success-11af90207d2f9fb4bbeae9239725ac5c.png
-application.js: application-de5e236a96e92ec9ec9f195acab4bc14.js
+application.js: application-4cee0af7ecc8cd375f8a30c69f4ad0ac.js
 binder.js: binder-3af39f1da6f167c2cbf453ed74daff3d.js
 binders/folder.js: binders/folder-91db727ad472f6a83e12fb3f7b3030ee.js
 binders/icheck.js: binders/icheck-5c1621b3f36a3f184889c9e35c9f8aca.js
@@ -118,7 +124,7 @@ binders/upload/iframe-transport.js: binders/upload/iframe-transport-7bb9ba11eea4
 dropdown.js: dropdown-0a0f3a61595bb7f0bbd7ac513a1c807d.js
 editinfo/apply.js: editinfo/apply-d1eab63b4b19853e365e7154c40d1b03.js
 editinfo/main.js: editinfo/main-1d9b42f3103961f266b228a1c6bcf590.js
-editinfo/newuser.js: editinfo/newuser-d1eab63b4b19853e365e7154c40d1b03.js
+editinfo/newuser.js: editinfo/newuser-f2d4be827e93ce0525cbf912c4337cfe.js
 facebox.js: facebox-191b86c7c778aad9427d32d1e16dac7b.js
 gen/boxresize.js: gen/boxresize-a162aca037dc1a6a8f35d27652e36bf7.js
 gen/cookie.js: gen/cookie-0604f2c7b2b3900ddcacab3ef6279f15.js
@@ -138,17 +144,17 @@ tooltip.js: tooltip-c1f31f50d05852374b1ca905917af3e6.js
 wy/advanced.js: wy/advanced-01d3e1942ab8766ddc228bd8ec3fbffa.js
 wy/wysi5.js: wy/wysi5-8a5037af8f1c3a6fa7d337299b216353.js
 standards.json: standards-4d8d2082bb3640cdf407ce4515f8d06e.json
-application.css: application-aaba15620364c9112b4385c97d09242a.css
+application.css: application-ac603a4f0aa24bad599d1870d58ab7df.css
 binders.css: binders-7270767b2a9e9fff880aa5de378ca791.css
 binders/folder.css: binders/folder-40f61fb57e03f42611e5cc63aff6193e.css
 box.css: box-b8972fc537f439c7d53ccd9adfe23206.css
-buttons/buttons.css: buttons/buttons-a217c9216b6d727e2ba3b5b7a7062c25.css
+buttons/buttons.css: buttons/buttons-9cca403a266424438923ea405de6337f.css
 buttons/zocial-regular-webfont.eot: buttons/zocial-regular-webfont-a0e11676e0eb455a805549dfe73095b3.eot
 buttons/zocial-regular-webfont.svg: buttons/zocial-regular-webfont-0e6254926a7b20f34112a2cc2e1cdcc3.svg
 buttons/zocial-regular-webfont.ttf: buttons/zocial-regular-webfont-64b8100c4452b3191c14f52556955667.ttf
 buttons/zocial-regular-webfont.woff: buttons/zocial-regular-webfont-beb0af4aa85ca3f84348c19883dbdbd9.woff
 devise/apply.css: devise/apply-0ad1afb7a35de94bd1e3ed2d11b7c881.css
-devise/newuser.css: devise/newuser-bae1fe6623a62e3ccf89675e17aed940.css
+devise/newuser.css: devise/newuser-699e38e3ba35e57a0543559fe1fe1d89.css
 editinfo.css: editinfo-7f91d7e2fc8e6b9c909c97164aa3292b.css
 gen/guiders.css: gen/guiders-acc3fea933996e2708a585726477c0f1.css
 home/educators.css: home/educators-0fdea0325db52694e5a437bf12c42162.css
@@ -162,7 +168,7 @@ jqueryui.css: jqueryui-3e5488d61bcd5d2d63259970ab23b226.css
 media_server_api.css: media_server_api-7270767b2a9e9fff880aa5de378ca791.css
 messages/main.css: messages/main-187b397142a653ce27d4a8a80b6efa8b.css
 search/main.css: search/main-82772556488157d592c21c6fa0f41192.css
-strap.css: strap-af2479ff52a2d4f509a4f8e836374b18.css
+strap.css: strap-67a539b8b7564fe71daf5473f00d5735.css
 teacher.css: teacher-8c6c06d902faa2d2d0799dc18f8d3361.css
 widgets/icheck.css: widgets/icheck-9f8386150ad015fa20947d4a7971e1fb.css
 jquery.pjax.js: jquery.pjax-d1cce8182a1606ac7252c4296716256c.js
