--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -16,6 +16,10 @@ claco.png: claco-8b30d9f353121d8d1947b51c5ee9ad07.png
 common/nothumb.png: common/nothumb-068c98cdacc7bf68c605ad275d1569e0.png
 common/plane.png: common/plane-0de42fd2f9a71ebcdb4176daff7fb46f.png
 common/plus.png: common/plus-052578f7c360b544fe94035b12c578da.png
+email/email_logo.png: email/email_logo-29e6ebd2f5b60eb03696b0f5c4f17cd1.png
+email/facebook.png: email/facebook-ed1e182f3af5c7708a8f17b3b554f759.png
+email/pinterest.png: email/pinterest-bd968b2b26c99a412af9849947ad27bc.png
+email/twitter.png: email/twitter-7524359a65bae9780c44a478154496e0.png
 fbox/closelabel.png: fbox/closelabel-fe82a955ae8e68eb7195f179ce515cf1.png
 fbox/loading.gif: fbox/loading-5c5a98dbe29c4a5337a7e19e056521f6.gif
 guider/guider_arrows.png: guider/guider_arrows-3f778a228be4e27b474a1db7cb57029d.png
