--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -60,6 +60,10 @@ public/devise/applybk.jpg: public/devise/applybk-d01fcc1fec3d2ad93f94fb86246f789
 public/erin.jpg: public/erin-b9b482c02accffc3b1cda1f6dd92f640.jpg
 public/fast.png: public/fast-f86d4ddd6c4a8e99182b23f074ccece3.png
 public/fullcore.png: public/fullcore-c0d8006f6a24531fc1f747545eee64dd.png
+public/goodies/bookmarklet_preview.jpg: public/goodies/bookmarklet_preview-be6df12574cf08801fc7997b4689c189.jpg
+public/goodies/goodies.jpg: public/goodies/goodies-7fe215f072253c96d9f09f3319627047.jpg
+public/goodies/poster_preview.jpg: public/goodies/poster_preview-111e749d9e75cf907bd99cf33a734a50.jpg
+public/heart.png: public/heart-5b3eb6c6912f4f6c88ddb4275b20d588.png
 public/highway.jpg: public/highway-17d945deffa8a9cebd3691722fe370f7.jpg
 public/highway.png: public/highway-c074fbde9b4f3f74530e0d58ecaa241a.png
 public/jeff.jpg: public/jeff-6e3587544f93ece94751437ec68e4fa7.jpg
@@ -117,13 +121,14 @@ stockfilethumbs/wmv.png: stockfilethumbs/wmv-ffe500c9db4402e68e56f126846e3e79.pn
 stockfilethumbs/xls.png: stockfilethumbs/xls-980bc311d58b7f23802c0e12c8d66294.png
 stockfilethumbs/xlsx.png: stockfilethumbs/xlsx-618bc0693ac24e4179ffd92317a67cd6.png
 success.png: success-11af90207d2f9fb4bbeae9239725ac5c.png
-application.js: application-4cee0af7ecc8cd375f8a30c69f4ad0ac.js
+application.js: application-e4989097ee1933c7e825c1f6649a61e4.js
 binders/folder.js: binders/folder-91db727ad472f6a83e12fb3f7b3030ee.js
 binders/icheck.js: binders/icheck-5c1621b3f36a3f184889c9e35c9f8aca.js
 binders/pretags.js: binders/pretags-9aeb3580994267ddf468f4dbd4bfdffd.js
 binders/taginit.js: binders/taginit-4b62d889f8b850f4901bc88aca91d79d.js
 binders/upload/fileupload.js: binders/upload/fileupload-7c646850014f6e74fa26c0bb6cee913c.js
 binders/upload/iframe-transport.js: binders/upload/iframe-transport-7bb9ba11eea463ce30f89318c2920495.js
+bookmarklet/post.js: bookmarklet/post-e44ea3ec20f4f7a57f260f0d1a2655fc.js
 dropdown.js: dropdown-0a0f3a61595bb7f0bbd7ac513a1c807d.js
 editinfo/apply.js: editinfo/apply-d1eab63b4b19853e365e7154c40d1b03.js
 editinfo/main.js: editinfo/main-1d9b42f3103961f266b228a1c6bcf590.js
@@ -145,8 +150,9 @@ tooltip.js: tooltip-c1f31f50d05852374b1ca905917af3e6.js
 wy/advanced.js: wy/advanced-01d3e1942ab8766ddc228bd8ec3fbffa.js
 wy/wysi5.js: wy/wysi5-8a5037af8f1c3a6fa7d337299b216353.js
 standards.json: standards-4d8d2082bb3640cdf407ce4515f8d06e.json
-application.css: application-63ca2e5350d3168f27e20286eb888daa.css
+application.css: application-de73526e70c8b201dacada0accc07ed0.css
 binders/folder.css: binders/folder-40f61fb57e03f42611e5cc63aff6193e.css
+bookmarklet/post.css: bookmarklet/post-7a4f3df75092e5e2caeff6d8865469ee.css
 box.css: box-b8972fc537f439c7d53ccd9adfe23206.css
 buttons/buttons.css: buttons/buttons-9cca403a266424438923ea405de6337f.css
 buttons/zocial-regular-webfont.eot: buttons/zocial-regular-webfont-a0e11676e0eb455a805549dfe73095b3.eot
@@ -159,7 +165,7 @@ editinfo.css: editinfo-18c1eaa9ada96e5b8c9dd1219da2e825.css
 gen/guiders.css: gen/guiders-acc3fea933996e2708a585726477c0f1.css
 home/educators.css: home/educators-d7dcc222e05084ff8471838a71aba1c8.css
 home/main.css: home/main-b4e88e858c4ba30f581eca373eac63d0.css
-home/pub/about.css: home/pub/about-d828dfad390c7e3cc313fbabf72109cf.css
+home/pub/about.css: home/pub/about-903d8395c4f9a7802caf0fa0f39a5c18.css
 home/pub/pioneers.css: home/pub/pioneers-079d64301b9d8854bc0fa04053053d83.css
 home/pub/team.css: home/pub/team-ce1e43f72a8d96a8b08ce936c64f0aaf.css
 home/pub/uwt.css: home/pub/uwt-1e8baecc5f7a535e85a2df14dad531cf.css
