--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -54,6 +54,7 @@ profile/subject.png: profile/subject-b45001b14b3cf8d458bc12a55b86bec0.png
 profile/whitescribe.png: profile/whitescribe-0a51f39d0d72b8462f56aa1ba0fdc120.png
 public/abc.png: public/abc-76dd8a9875132052f516af2f1787f338.png
 public/bg.jpg: public/bg-feb27caf0f95d66ccfa16ba99309987d.jpg
+public/claco_solid.png: public/claco_solid-2460335d35ee7570785fd5e9154d61c3.png
 public/cnn.png: public/cnn-f5a12189fc7824c3f03d653397f33225.png
 public/core.png: public/core-9229a7632f41261cb83e725ca787527f.png
 public/devise/applybk.jpg: public/devise/applybk-d01fcc1fec3d2ad93f94fb86246f789e.jpg
