--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -160,10 +160,9 @@ tooltip.js: tooltip-c1f31f50d05852374b1ca905917af3e6.js
 wy/advanced.js: wy/advanced-01d3e1942ab8766ddc228bd8ec3fbffa.js
 wy/wysi5.js: wy/wysi5-8a5037af8f1c3a6fa7d337299b216353.js
 standards.json: standards-4d8d2082bb3640cdf407ce4515f8d06e.json
-application.css: application-026fe07c4e94a263cffac1c4a8e19fee.css
+application.css: application-20afcf3155abb48d72d8a96f239c2760.css
 binders/folder.css: binders/folder-2faf8bd39c06df1b8bdb0b1bd0bb87e5.css
 bookmarklet/post.css: bookmarklet/post-7a4f3df75092e5e2caeff6d8865469ee.css
-box.css: box-b8972fc537f439c7d53ccd9adfe23206.css
 buttons/buttons.css: buttons/buttons-9cca403a266424438923ea405de6337f.css
 buttons/zocial-regular-webfont.eot: buttons/zocial-regular-webfont-a0e11676e0eb455a805549dfe73095b3.eot
 buttons/zocial-regular-webfont.svg: buttons/zocial-regular-webfont-0e6254926a7b20f34112a2cc2e1cdcc3.svg
@@ -175,7 +174,8 @@ editinfo.css: editinfo-18c1eaa9ada96e5b8c9dd1219da2e825.css
 errors.css: errors-39335cb6f0222c06624dd622790b7a4c.css
 gen/guiders.css: gen/guiders-acc3fea933996e2708a585726477c0f1.css
 home/educators.css: home/educators-d7dcc222e05084ff8471838a71aba1c8.css
-home/main.css: home/main-a667dede255604d5f52c354aa640af71.css
+home/main.css: home/main-2a2e5e03c625bdd93b88a47018f74fad.css
+home/nav.css: home/nav-b818b74bee36b073f3ddc461f185ad11.css
 home/pub/about.css: home/pub/about-903d8395c4f9a7802caf0fa0f39a5c18.css
 home/pub/explore.css: home/pub/explore-5a41ccc37dffb3ffd36d6f338826ee20.css
 home/pub/explore_detail.css: home/pub/explore_detail-c162d3ba6876898bccaca4e78a80276e.css
@@ -184,16 +184,16 @@ home/pub/press.css: home/pub/press-574b91db1e8aba26b524d98e08109fa7.css
 home/pub/team.css: home/pub/team-ce1e43f72a8d96a8b08ce936c64f0aaf.css
 home/pub/uwt.css: home/pub/uwt-1e8baecc5f7a535e85a2df14dad531cf.css
 home/public.css: home/public-84e3475f833513d9c9b69f0280cfc41e.css
-jqueryui.css: jqueryui-3e5488d61bcd5d2d63259970ab23b226.css
 messages/main.css: messages/main-187b397142a653ce27d4a8a80b6efa8b.css
 search/main.css: search/main-82772556488157d592c21c6fa0f41192.css
 teacher.css: teacher-ec8c81086dd990ea25534ba2bb32805b.css
-widgets/icheck.css: widgets/icheck-9f8386150ad015fa20947d4a7971e1fb.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
 jquery.pjax.js: jquery.pjax-d1cce8182a1606ac7252c4296716256c.js
 bootstrap.css: bootstrap-b9831a2cf978caaa958bcbb09d58475e.css
-strap.css: strap-c52761e555e581b9ade8df4fc3d1ed58.css
+box.css: box-b8972fc537f439c7d53ccd9adfe23206.css
+jqueryui.css: jqueryui-3e5488d61bcd5d2d63259970ab23b226.css
+widgets/icheck.css: widgets/icheck-9f8386150ad015fa20947d4a7971e1fb.css
 video-js.css: video-js-8fba5d3e38e191d2268019543ae06d89.css
 video-js.png: video-js-dc69ccfbc38a977a032886c4cfa6920e.png
 video-js.swf: video-js-f52e4551cc58ba3396f348370703760a.swf
