--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -131,32 +131,20 @@ stockfilethumbs/xlsx.png: stockfilethumbs/xlsx-618bc0693ac24e4179ffd92317a67cd6.
 success.png: success-11af90207d2f9fb4bbeae9239725ac5c.png
 application.js: application-e78cb793d095cb481deda0831ce36452.js
 binders/folder.js: binders/folder-91db727ad472f6a83e12fb3f7b3030ee.js
-binders/icheck.js: binders/icheck-5c1621b3f36a3f184889c9e35c9f8aca.js
 binders/pretags.js: binders/pretags-28ac79ce6e5763e22e823298ebbe674b.js
 binders/taginit.js: binders/taginit-4b62d889f8b850f4901bc88aca91d79d.js
-binders/upload/fileupload.js: binders/upload/fileupload-7c646850014f6e74fa26c0bb6cee913c.js
-binders/upload/iframe-transport.js: binders/upload/iframe-transport-7bb9ba11eea463ce30f89318c2920495.js
 bookmarklet/post.js: bookmarklet/post-ea4a0cf0e6f740afdf3a1511fc0c0999.js
-dropdown.js: dropdown-0a0f3a61595bb7f0bbd7ac513a1c807d.js
 editinfo/apply.js: editinfo/apply-d1eab63b4b19853e365e7154c40d1b03.js
-editinfo/main.js: editinfo/main-1d9b42f3103961f266b228a1c6bcf590.js
+editinfo/main.js: editinfo/main-504baa779c02a6c8b4b65db651c61053.js
 editinfo/newuser.js: editinfo/newuser-f2d4be827e93ce0525cbf912c4337cfe.js
-facebox.js: facebox-191b86c7c778aad9427d32d1e16dac7b.js
-gen/boxresize.js: gen/boxresize-a162aca037dc1a6a8f35d27652e36bf7.js
-gen/cookie.js: gen/cookie-0604f2c7b2b3900ddcacab3ef6279f15.js
-gen/guiders.js: gen/guiders-693d564bd42978b8a4bcafb2ec898d78.js
-gen/sticky.js: gen/sticky-c7405eda437c719c60a02718ab838fc1.js
-gen/wizard.js: gen/wizard-7523ae0f935550c9aff5e16185825d59.js
 home/explore.js: home/explore-70a0ac39897edd7737d322b9b342ae86.js
 home/explore_detail.js: home/explore_detail-738a058493f858212c5028550178357c.js
-home/main.js: home/main-b004fbfca0cd774f733d66cf8dddceaf.js
+home/main.js: home/main-05890385ef7cad0fecb8692a3c01f360.js
 home/pub.js: home/pub-b7480cb12f259c319ff6fa13a0fa9e0f.js
-jqueryui.js: jqueryui-c04b8ed279f78b6387c8d090964d2e16.js
-messages/show.js: messages/show-af1bfe6546d966549eb5e11fd056910c.js
+home/wizard.js: home/wizard-7523ae0f935550c9aff5e16185825d59.js
+messages/show.js: messages/show-4d693929057739e9e06cd354541c5492.js
 profile/main.js: profile/main-ff0376a2336f8194e0602536646c5372.js
 search/main.js: search/main-4e16709cce13c68fd83fd5fe3fce9a18.js
-tabs.js: tabs-c33b80148176645ee1b9efdc16eae810.js
-tooltip.js: tooltip-c1f31f50d05852374b1ca905917af3e6.js
 wy/advanced.js: wy/advanced-01d3e1942ab8766ddc228bd8ec3fbffa.js
 wy/wysi5.js: wy/wysi5-8a5037af8f1c3a6fa7d337299b216353.js
 standards.json: standards-4d8d2082bb3640cdf407ce4515f8d06e.json
@@ -189,7 +177,19 @@ search/main.css: search/main-82772556488157d592c21c6fa0f41192.css
 teacher.css: teacher-ec8c81086dd990ea25534ba2bb32805b.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
+binders/icheck.js: binders/icheck-5c1621b3f36a3f184889c9e35c9f8aca.js
+binders/upload/fileupload.js: binders/upload/fileupload-7c646850014f6e74fa26c0bb6cee913c.js
+binders/upload/iframe-transport.js: binders/upload/iframe-transport-7bb9ba11eea463ce30f89318c2920495.js
+dropdown.js: dropdown-0a0f3a61595bb7f0bbd7ac513a1c807d.js
+facebox.js: facebox-191b86c7c778aad9427d32d1e16dac7b.js
+gen/boxresize.js: gen/boxresize-a162aca037dc1a6a8f35d27652e36bf7.js
+gen/cookie.js: gen/cookie-0604f2c7b2b3900ddcacab3ef6279f15.js
+gen/guiders.js: gen/guiders-693d564bd42978b8a4bcafb2ec898d78.js
+gen/sticky.js: gen/sticky-c7405eda437c719c60a02718ab838fc1.js
 jquery.pjax.js: jquery.pjax-d1cce8182a1606ac7252c4296716256c.js
+jqueryui.js: jqueryui-566624888bdb4175729de4e02379c59e.js
+tabs.js: tabs-c33b80148176645ee1b9efdc16eae810.js
+tooltip.js: tooltip-c1f31f50d05852374b1ca905917af3e6.js
 bootstrap.css: bootstrap-b9831a2cf978caaa958bcbb09d58475e.css
 box.css: box-b8972fc537f439c7d53ccd9adfe23206.css
 jqueryui.css: jqueryui-3e5488d61bcd5d2d63259970ab23b226.css
