--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /public/uploads
 /public/assets
 !/public/assets/manifest.yml
+!/public/assets/sources_manifest.yml
 
 # For consular -- @diwank
 Termfile
